[project]
name = "ai-fx-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for real-time and historical foreign exchange rates"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Pavan", email = "your.email@example.com" }
]
keywords = ["mcp", "currency", "exchange-rates", "forex", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.14.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-fx-mcp"
Repository = "https://github.com/yourusername/ai-fx-mcp"
Issues = "https://github.com/yourusername/ai-fx-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
